<resources>
    <string name="app_name">Doctor App</string>
    <string name="activity_label_doctor_sign_up">Sign up as Doctor</string>
    <string name="activity_label_patient_sign_up">Sign up as Patient</string>
    <string name="activity_label_doctor_home">Home</string>
    <string name="activity_label_doctor_profile">Doctor Profile</string>
    <string name="activity_label_doctor_calendar">Schedule</string>
    <string name="activity_label_filter">Find New Specialist</string>
    <string name="activity_label_login">Log in</string>
    <string name="activity_label_availability">Availability</string>
    <string name="activity_label_patient_home">Home</string>
    <string name="activity_label_patient_profile">Medical Profile</string>
    <string name="activity_label_appointment_history">Appointment History</string>
    <string name="activity_label_register_list">Past Patients</string>

    <string name="login_title">Welcome! Please log in.</string>
    <string name="login_username_prompt">Enter Username</string>
    <string name="login_password_prompt">Enter Password</string>
    <string name="login_button_title_log_in">Log in</string>
    <string name="login_button_title_doctor_sign_up">Sign up as Doctor</string>
    <string name="login_button_title_patient_sign_up">Sign up as Patient</string>
    <string name="login_user_not_found">Username or password is incorrect, or account does not exist</string>

    <string name="doctor_signup_title">Sign up as Doctor</string>
    <string name="doctor_signup_prompt_username">Enter Username</string>
    <string name="doctor_signup_prompt_password">Enter Password</string>
    <string name="doctor_signup_prompt_first_name">Enter First Name</string>
    <string name="doctor_signup_prompt_last_name">Enter Last Name</string>
    <string name="doctor_signup_prompt_gender">Enter Gender</string>
    <string name="doctor_signup_prompt_university">Enter University Name</string>
    <string name="doctor_signup_prompt_specialization">Enter a Specialization</string>
    <string name="doctor_signup_button_title_add_specialization">Add</string>
    <string name="doctor_signup_label_added_specializations">Added:</string>
    <string name="doctor_signup_prompt_doctor_id">Enter Doctor ID</string>
    <string name="doctor_signup_prompt_health_number">Enter Health Number</string>
    <string name="doctor_signup_prompt_bio">Enter Short Biography</string>
    <string name="doctor_signup_button_title_back">Cancel</string>
    <string name="doctor_signup_button_title_sign_up">Sign up</string>

    <string name="patient_signup_title">Sign up as Patient</string>
    <string name="patient_signup_prompt_username">Enter Username</string>
    <string name="patient_signup_prompt_password">Enter Password</string>
    <string name="patient_signup_prompt_first_name">Enter First Name</string>
    <string name="patient_signup_prompt_last_name">Enter Last Name</string>
    <string name="patient_signup_prompt_gender">Enter Gender</string>
    <string name="patient_signup_prompt_medical_condition">Enter Medical Conditions</string>
    <string name="patient_signup_prompt_health_number">Enter Health Number</string>
    <string name="patient_signup_button_button_title_set_date_of_birth">Set Date of Birth</string>
    <string name="patient_signup_button_title_sign_up">Sign up</string>
    <string name="patient_signup_button_title_back">Cancel</string>

    <string name="doctor_date">Monday 1st, August</string>
    <string name="book">Book</string>
    <string name="Booked">Booked</string>
    <string name="available_activity_prompt">List of Available Time Slots</string>
    <string name="filter_button">Search</string>
    <string name="results">0 results</string>

    <string name="patient_home_label_upcoming_appointments">Upcoming Appointments</string>
    <string name="patient_home_label_no_upcoming_appointments">No Upcoming Appointments</string>
    <string name="patient_home_find_specialist">Find a Specialist</string>
    <string name="patient_home_view_profile">My Medical Profile</string>

    <string name="patient_profile_full_name">Name:</string>
    <string name="patient_profile_gender">Gender:</string>
    <string name="patient_profile_birthdate">Date of birth:</string>
    <string name="patient_profile_medical_condition">Medical conditions:</string>
    <string name="patient_profile_past_appointments">Appointment History</string>
</resources>