<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientSignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/patient_signup_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/field_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/patient_signup_prompt_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/patient_signup_prompt_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/field_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/patient_signup_prompt_first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/field_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/patient_signup_prompt_last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/field_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/patient_signup_prompt_gender"
                android:inputType="text" />

            <EditText
                android:id="@+id/field_sin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/patient_signup_prompt_health_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/field_medical_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/patient_signup_prompt_medical_condition"
                android:inputType="text" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showDatePickerDialog"
                android:text="@string/patient_signup_button_button_title_set_date_of_birth"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.654" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:onClick="back"
                    android:text="@string/patient_signup_button_title_back"
                    app:backgroundTint="#00BCD4" />

                <Button
                    android:id="@+id/Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:onClick="signUp"
                    android:text="@string/patient_signup_button_title_sign_up"
                    app:backgroundTint="#00BCD4" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>