<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorSignupActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/doctor_signup_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:autoSizeTextType="uniform" />

            <EditText
                android:id="@+id/field_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/doctor_signup_prompt_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/doctor_signup_prompt_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/field_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/doctor_signup_prompt_first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/field_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/doctor_signup_prompt_last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/field_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/doctor_signup_prompt_gender"
                android:inputType="text" />

            <EditText
                android:id="@+id/field_uni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/doctor_signup_prompt_university"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addSpecText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/doctor_signup_prompt_specialization"
                    android:inputType="textPersonName|text" />

                <Button
                    android:id="@+id/addSpecButton"
                    android:layout_width="32dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0.5"
                    android:text="@string/doctor_signup_button_title_add_specialization"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/addedSpecText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/doctor_signup_label_added_specializations"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/field_doctor_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/doctor_signup_prompt_doctor_id"
                android:inputType="number" />

            <EditText
                android:id="@+id/field_sin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/doctor_signup_prompt_health_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/field_doctor_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/doctor_signup_prompt_bio"
                android:inputType="textAutoCorrect|text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:onClick="backButton"
                    android:text="Back"
                    app:backgroundTint="#00BCD4" />

                <Button
                    android:id="@+id/Continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:onClick="sendMessage"
                    android:text="Continue"
                    app:backgroundTint="#00BCD4" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>